pembuatan css satu

--- a/index.html
+++ b/index.html
@@ -4,24 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas BMI Calculator</title>
+    <style>
+            body {
+        margin-top: 100px;
+        font-family: Arial, sans-serif;
+        background-color:rgb(196, 200, 212);
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        }
+
+    .container {
+        width: 80%;
+        border-radius: 40px;
+        background-color:rgb(245, 246, 248);
+        padding-bottom: 20px;
+        }
+
+
+    </style>
 </head>
 <body>
-        <div class="container">
-            <div class="title">
-                <h1>BMI KALKULATOR</h1>
-                <p>Ingin tahu apakah berat badan Anda sudah ideal?</p>
-                <p>Yuk coba BMI Kalkulator sekarang dan dapatkan jawabannya dalam hitungan detik !</p>
-            </div>
-            <div class="form-BMI">
-                <label for="berat">Berat Badan(Kg):</label><br>
-                <input type="number" id="berat" name="berat" placeholder="Berat (Kg)" maxlength="3">
-                <br>
-                <label for="tinggi">Tinggi Badan(Cm):</label><br>
-                <input type="number" id="tinggi" name="tinggi" placeholder="Tinggi (Cm)" maxlength="3">
-                <br>
-                <button onclick="hitungBMI()" id="button-BMI">Hitung BMI</button>
-                <p id="hasil"></p>
-            </div>
+    <div class="container">
+        <div class="title">
+            <h1>BMI KALKULATOR</h1>
+            <p>Ingin tahu apakah berat badan Anda sudah ideal?</p>
+            <p>Yuk coba BMI Kalkulator sekarang dan dapatkan jawabannya dalam hitungan detik !</p>
         </div>
+        <div class="form-BMI">
+            <label for="berat">Berat Badan(Kg):</label><br>
+            <input type="number" id="berat" name="berat" placeholder="Berat (Kg)" maxlength="3">
+            <br>
+            <label for="tinggi">Tinggi Badan(Cm):</label><br>
+            <input type="number" id="tinggi" name="tinggi" placeholder="Tinggi (Cm)" maxlength="3">
+            <br>
+            <button onclick="hitungBMI()" id="button-BMI">Hitung BMI</button>
+            <p id="hasil"></p>
+        </div>
+    </div>
+<script>
+</script>
 </body>
 </html>
