--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
         </div>
     </div>
 <script>
+    function hitungBMI() {
+        const berat = document.getElementById("berat").value;
+        const tinggi = document.getElementById("tinggi").value;
+        const hasil = document.getElementById("hasil");
+        
+    }   
 </script>
 </body>
 </html>
